--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,11 @@
   </head>
 
   <body>
-    <p class="welcome">Welcome!</p>
 
-    <div id="header" style="">
-      <h1>Selectors</h1>
-      <h2>In CSS</h2>
-      <p>Welcome to the Website</p>
+    <div id="header">
+      <h1>Contact Us</h1>
     </div>
 
-    <p>Hello there ninjas!</p>
-    <p>Hello there ninjas!</p>
     <p>Hello there ninjas!</p>
     <p>Hello there ninjas!</p>
     <p>Hello there ninjas!</p>
