--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,18 @@
 
     <h2 id="content-header">Content</h2>
 
-    <p>Hello there ninjas!  contact us below.</p>
-    <p>Aren't paragraphs cool?</p>
-
-    <a href="http://www.google.com">Google</a>
+    <div>
+      <p>Hello there ninjas!  contact us below.</p>
+      <p>Aren't paragraphs cool?</p>
+    </div>
 
     <span>Yo, I'm a span tag</span>
 
     <span class="deck">Yo, I'm a span too</span>
     <span class="deck">This is a deck of spans</span>
     <span class="deck">I like span decks</span>
+
+    <a href="#">I'm a spanner</a>
 
 
   </body>
