--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,12 @@
 
     <h2 id="content-header">Content</h2>
 
-    <div>
-      <p>Hello there ninjas!  contact us below.</p>
-      <p>Aren't paragraphs cool?</p>
+    <div id="main-content">
+      <p>Hello there <strong>ninjas!</strong> contact us below.</p>
+      <p class="test">Aren't paragraphs cool?</p>
     </div>
+
+    <p>None contained p tag</p>
 
     <span>Yo, I'm a span tag</span>
 
