--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,14 @@
       <div id="sub-content">
         <p>More content</p>
       </div>
-      
+
     </div>
 
     <p>None contained p tag</p>
 
     <span>Yo, I'm a span tag</span>
 
-    <span class="deck">Yo, I'm a span too</span>
+    <span class="deck halls">Yo, I'm a span too</span>
     <span class="deck">This is a deck of spans</span>
     <span class="deck">I like span decks</span>
 
